<resources>
    <string name="app_name">MyCRUD</string>


    <string name="titulo">MyCrud</string>


    <string name="titulo_lista">Listado de empleados</string>

    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>

    <string name="titulo_form">Información de empleados</string>

    <!--CLIENTE-->

    <string name="nombre">Nombre</string>
    <string name="apellidoP">Apellido Paterno</string>
    <string name="apellidoM">Apellido Materno</string>
    <string name="telefono">Telefono</string>
    <string name="salario">Salario</string>
    <string name="puesto">Puesto</string>
    <string name="estado">Estado</string>

    <!--TIANGUIS-->
    <string name="ubicacion">Ubicacion</string>
    <string name="horaInicio">Hora Inicio</string>
    <string name="horaFinal">Hora Final</string>
    <string name="organizador">Organizador</string>

    <!--RECETAS-->
    <string name="descripcion">Descripcion</string>
    <string name="costoAprox">Costo Aproximado</string>
    <string name="paisOrigen">País de Origen</string>
    <string name="creador">Creador</string>

</resources>